clusters/flux-system/httpr/loki.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: loki
  name: loki
  namespace: httpr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loki
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/otel-default: "true"
        io.kompose.service: loki
    spec:
      containers:
        - args:
            - -config.file=/etc/loki/local-config.yaml
            - -log.level=error
          image: grafana/loki:2.8.2
          name: loki
          ports:
            - containerPort: 3100
          resources: {}
          volumeMounts:
            - mountPath: /etc/loki/
              name: loki-config
      restartPolicy: Always
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: loki
  name: loki
  namespace: httpr
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 3100
  selector:
    io.kompose.service: loki
status:
  loadBalancer: {}
