clusters/flux-system/httpr/prometheus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: prometheus
  name: prometheus
  namespace: httpr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/otel-default: "true"
        io.kompose.service: prometheus
    spec:
      containers:
        - args:
            - --config.file=/etc/config/prometheus.yaml
            - --web.enable-remote-write-receiver
            - --enable-feature=exemplar-storage
          image: prom/prometheus:latest
          name: prometheus
          ports:
            - containerPort: 9090
          resources: {}
          volumeMounts:
            - mountPath: /etc/config
              name: prometheus-config
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: prometheus
  name: prometheus
  namespace: httpr
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: prometheus
status:
  loadBalancer: {}
